--- a/scss/sections/__conheca.scss
+++ b/scss/sections/__conheca.scss
@@ -134,7 +134,7 @@
             height: 33px;
             
             @media screen and (max-width: $bp-MD) {
-                height: 22px;
+                height: 26px;
                 bottom: -19px;
             }
             
